new sections about the browsers

--- a/browsers.html
+++ b/browsers.html
@@ -6,15 +6,14 @@
     <title>Chronicles.exe</title>
 </head>
 <body>
-    <h1>Hello Guys</h1>
-    <p>this is my site, 
-        where I post my things, 
-        all my opinions and my thoughts</p>
+    <h1>Browsers</h1>
+    <p>some ideas about the internet browsers, from where I see</p>
 
     <nav>
         <a href="index.html">Main</a> |
-        <a href="about.html">Sobre</a> |
-        <a href="browsers.html">Browsers</a>
+        <a href="firefox.html">Firefox</a>
+        <a href="chrome.html">Chrome</a>
+        <a href="edge.html">Edge</a>
     </nav>
 </body>
 
